--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codag — Organizational memory for coding agents</title>
-    <meta name="description" content="Your codebase has knowledge that lives nowhere in the code. Codag captures it and serves it to agents before they write.">
+    <meta name="description" content="Your codebase has years of decisions that no agent can access. Codag mines institutional knowledge from git history and serves it to agents before they write.">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <!-- Open Graph / Link Preview -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Codag — Organizational memory for coding agents">
-    <meta property="og:description" content="Your codebase has knowledge that lives nowhere in the code. Codag captures it and serves it to agents before they write.">
+    <meta property="og:description" content="Your codebase has years of decisions that no agent can access. Codag mines institutional knowledge from git history and serves it to agents before they write.">
     <meta property="og:image" content="https://codag.ai/socialpreview.png">
     <meta property="og:url" content="https://codag.ai">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Codag — Organizational memory for coding agents">
-    <meta name="twitter:description" content="Your codebase has knowledge that lives nowhere in the code. Codag captures it and serves it to agents before they write.">
+    <meta name="twitter:description" content="Your codebase has years of decisions that no agent can access. Codag mines institutional knowledge from git history and serves it to agents before they write.">
     <meta name="twitter:image" content="https://codag.ai/socialpreview.png">
 
     <!-- Google Fonts -->
@@ -502,10 +502,10 @@
 
             <!-- Sub -->
             <p class="hero-fade-1 text-base sm:text-lg md:text-xl text-gray-400 max-w-2xl mx-auto mb-4 leading-relaxed px-2">
-                Your codebase has knowledge that lives nowhere in the code — PR comments, rejected patterns, architectural decisions.
+                Your codebase has years of decisions that no agent can access — and no new platform can capture.
             </p>
             <p class="hero-fade-1 text-base sm:text-lg md:text-xl text-gray-200 max-w-2xl mx-auto mb-12 md:mb-14 leading-relaxed px-2 font-medium">
-                Codag captures it and serves it to agents before they write.
+                Codag mines it from your git history and serves it to agents before they write.
             </p>
 
             <!-- CTA -->
@@ -552,8 +552,8 @@
                     <p class="text-gray-400 text-[0.95rem] leading-relaxed">When people leave, their context vanishes. No commit message captures why a pattern was rejected.</p>
                 </div>
                 <div class="card fade-in">
-                    <h3 class="font-display text-lg font-semibold mb-2 text-white">AI-generated code is exponential</h3>
-                    <p class="text-gray-400 text-[0.95rem] leading-relaxed">41% of production code is now AI-generated. The ecosystem races to write faster. Nobody makes agents write wiser.</p>
+                    <h3 class="font-display text-lg font-semibold mb-2 text-white">New platforms can't fix old context</h3>
+                    <p class="text-gray-400 text-[0.95rem] leading-relaxed">Tools like Entire capture what agents do going forward. But the decisions that shaped your codebase happened years ago — before any agent existed.</p>
                 </div>
             </div>
         </div>
@@ -590,7 +590,7 @@
                 Two layers. One <span class="accent-text">memory</span>.
             </h2>
             <p class="text-gray-400 text-lg md:text-xl mb-16 md:mb-20 max-w-xl fade-in">
-                Every competitor analyzes the code itself. We analyze the decisions that shaped it.
+                Other tools capture what agents do going forward. We surface what your team already knows.
             </p>
 
             <!-- Layer 1: Architectural Memory -->
@@ -742,49 +742,51 @@
         <div class="timeline-node" style="top: 60px;"></div>
         <div class="divider mb-16 md:mb-24"></div>
         <div class="max-w-4xl">
-            <p class="section-label mb-4 fade-in">The market is forming</p>
+            <p class="section-label mb-4 fade-in">The category is here</p>
             <h2 class="font-display text-2xl sm:text-3xl md:text-5xl font-bold mb-5 fade-in leading-[1.05]">
-                Memory for AI is a <span class="accent-text">category</span>.
+                $100M+ is flowing into <span class="accent-text">agent memory</span>.
             </h2>
             <p class="text-gray-400 text-lg mb-14 max-w-xl fade-in leading-relaxed">
-                The biggest investors in tech are betting that AI agents need persistent memory. Nobody has claimed the memory layer for code.
+                The ex-CEO of GitHub just raised $60M because agent context is broken. He's right. But every player captures what agents do going forward. Nobody mines the institutional knowledge that already exists.
             </p>
 
             <div class="grid md:grid-cols-2 gap-5 mb-14 stagger">
+                <div class="card-static fade-in" style="border-color: rgba(34,211,238,0.15);">
+                    <div class="flex items-baseline justify-between mb-2">
+                        <h3 class="font-display text-base font-semibold text-white">Entire</h3>
+                        <span class="font-mono text-sm cyan-text">$60M raised</span>
+                    </div>
+                    <p class="text-gray-400 text-sm leading-relaxed">Founded by GitHub's ex-CEO. Captures forward-looking agent context — prompts, transcripts, checkpoints. Requires teams to adopt a new platform. Context starts fresh.</p>
+                </div>
                 <div class="card-static fade-in">
                     <div class="flex items-baseline justify-between mb-2">
                         <h3 class="font-display text-base font-semibold text-white">Mem0</h3>
                         <span class="font-mono text-sm text-purple-400">$24M raised</span>
                     </div>
-                    <p class="text-gray-400 text-sm leading-relaxed">YC-backed memory layer for AI assistants. Series A led by Square Peg with a16z backing. Valued at $100M+.</p>
+                    <p class="text-gray-400 text-sm leading-relaxed">YC-backed memory layer for AI assistants. Series A led by Square Peg with a16z backing. General-purpose — not built for code.</p>
                 </div>
                 <div class="card-static fade-in">
                     <div class="flex items-baseline justify-between mb-2">
                         <h3 class="font-display text-base font-semibold text-white">Letta</h3>
                         <span class="font-mono text-sm text-purple-400">$10M raised</span>
                     </div>
-                    <p class="text-gray-400 text-sm leading-relaxed">Seed from Felicis Ventures. Stateful agents with long-term memory. Founded by the MemGPT research team.</p>
-                </div>
-                <div class="card-static fade-in">
-                    <div class="flex items-baseline justify-between mb-2">
-                        <h3 class="font-display text-base font-semibold text-white">Sentra</h3>
-                        <span class="font-mono text-sm text-purple-400">a16z backed</span>
-                    </div>
-                    <p class="text-gray-400 text-sm leading-relaxed">Enterprise organizational memory. Backed by Andreessen Horowitz. Capturing institutional knowledge for AI systems.</p>
+                    <p class="text-gray-400 text-sm leading-relaxed">Felicis-backed stateful agents with long-term memory. Founded by the MemGPT research team. General-purpose agent memory, not code-specific.</p>
                 </div>
                 <div class="card-static fade-in">
                     <div class="flex items-baseline justify-between mb-2">
                         <h3 class="font-display text-base font-semibold text-white">Cursor & Cognition</h3>
-                        <span class="font-mono text-sm text-purple-400">shipping</span>
+                        <span class="font-mono text-sm text-purple-400">shipping features</span>
                     </div>
-                    <p class="text-gray-400 text-sm leading-relaxed">Cursor shipped Blame for git context. Cognition (Devin) launched Agent Trace. The tools are converging on memory.</p>
+                    <p class="text-gray-400 text-sm leading-relaxed">Cursor shipped Blame for git context. Cognition (Devin) launched Agent Trace. The tools are converging on memory as a feature, not a product.</p>
                 </div>
             </div>
 
-            <p class="text-white text-xl md:text-2xl font-display font-bold fade-in">
-                Nobody's building the memory layer for code.<br>
-                <span class="accent-text">That's us.</span>
-            </p>
+            <div class="card fade-in" style="border-color: rgba(124,92,252,0.25);">
+                <h3 class="font-display text-lg md:text-xl font-bold text-white mb-3">Where Codag fits</h3>
+                <p class="text-gray-300 text-base leading-relaxed">
+                    Every player above captures <span class="text-white font-medium">forward-looking context</span> — what agents do from now on. Codag captures <span class="text-white font-medium">backward-looking context</span> — the years of PR decisions, rejected patterns, and architectural reasoning that shaped your codebase before agents existed. That knowledge doesn't exist in any checkpoint. It only exists if someone mines it. <span class="accent-text font-semibold">That's us.</span>
+                </p>
+            </div>
         </div>
     </section>
 
@@ -820,7 +822,7 @@
                 <div>
                     <img src="codag.svg" alt="Codag" class="h-5 invert opacity-60 mb-5">
                     <p class="text-gray-500 text-sm leading-relaxed">
-                        The memory layer for coding agents. Built by
+                        The backward-looking memory layer for coding agents. No platform migration. Plugs into your existing stack via MCP. Built by
                         <span class="text-gray-300">Michael Zhou</span>
                         — previously Shopify, Okta. University of Toronto.
                     </p>
